# cloud-logs

./: README.md  package-lock.json  package.json
src/: App.tsx  Checkbox.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  MultiSelect.tsx  index.css
src-api/: cl-api.go  cloudwatch.go  go.mod  go.sum
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client_builder.rs  commands.rs  engine.rs  lib.rs  main.rs
